--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -248,6 +248,7 @@ figure {
   &.third {
     > a,
     > img {
+      margin-bottom: 1em;
       @include breakpoint($small) {
         width: calc(33.3333% - 0.5em);
       }
